--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ h1 {
 /* About us */
 
 #aloitus {
-    background-color: #262626;
+    background-color: rgba(49,49,49, 0.5);
     text-align: center;
     padding-top: 30px;   
 }
